2008-03-09  Jari Aalto  <jari.aalto@cante.net>

	* bin/cygbuild.sh: (CygbuildGPGverify): Add to gpg call:
	--no-permission-warning --no-secmem-warning --no-mdc-warning

2008-03-08  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: (HELP::TROUBLESHOOTING). Add
	section `Porting and Python os.rename'.
	(PACKAGE MAINTENANCE COMMANDS::Other commands): Remove
	command [shadow].
	(OPTIONAL EXTERNAL FILES): Rephrase initial paragraph.

	* bin/cygbuild.sh:
	(CygbuildInstallFixDocdirInstall): Ensure that target directory for
	tar move exists.
	(CygbuildInstallFixFileExtensions): check documentation for
	filenames.
	(CygbuildIsCygwin): New.
	(CygbuildIsLinux): New.
	(CygbuildCygcheckLibraryDepSource): Rewrite logic. Detect SMTPSERVER
	(CygbuildFindDo): Exclude version control directories.
	(CygbuildTreeSymlinkCopy): Use `CygbuildFindDo'.
	(CygbuildInstallPackageInfo): Use `CygbuildFindDo'.
	(CygbuildTarDirectory): Simplify `status' check.
	(CygbuildPatchApplyRun): Use `CygbuildIsCygwin' to check if
	--binary option is needed.
	(CygbuildTreeSymlinkCopy): Add missing continuation marker to
	call `CygbuildFindDo'.
	(CygbuildCommandMain): Remove command [reshadow].

	* etc/template/setup.py.tmp: New file.

2008-03-07  Jari Aalto  <jari.aalto@cante.net>

	* etc/lib/cygbuild.pl: Remove option -P|--prefix. Unneeded.

	* bin/cygbuild.sh:
	-- change variable $OPTION_PREFIX to OPTION_PREFIX_MODE
	(CygbuildCmdMkpatchMain): Remove j or z
	option check. Convert tar options to --long format.
	(CygbuildTarDirectory): Fix tar directory detection. If there
	were files that conatined spaces, the function failed. Moving
	$(NF) to column $6 fixes this. Remove j or z option check.
	Convert tar options to --long format.
	(CygbuildInstallFixDocdirInstall): Convert tar options to
	--long format.
	(CygbuildCmdDownloadCygwinPackage): Remove j or z option check.
	(CygbuildCommandMain): Remove option -P|--prefix. Unneeded.
	(CygbuildMakefileRunInstallMain): Rename. Was